--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
 			"TERRAFORM_VERSION": "0.14.5",
 			"TFLINT_VERSION": "0.24.1",
 			"TERRAGRUNT_VERSION": "0.28.1",
-			"INSTALL_AZURE_CLI": "false",
+			"INSTALL_AZURE_CLI": "true",
 			"INSTALL_DOCKER": "false",
 			"NODE_VERSION": "lts/*",
 			"INSTALL_ZSH": "false"
@@ -56,13 +56,12 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "terraform --version",
 	"postCreateCommand": ".devcontainer/scripts/install.sh",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"features": {
-		"aws-cli": "latest",
+		"terraform": "latest",
 		"azure-cli": "latest",
 		"homebrew": "latest"
 	}
